@@ -43,6 +43,7 @@
 #include <FileViewModel.h>
 #include "gps/GpxFileModel.h"
 #include "MathHelper.h"
+#include "MapThemeSortFilterProxyModel.h"
 
 class MarbleControlBoxPrivate
 {
@@ -61,6 +62,7 @@ class MarbleControlBoxPrivate
 
     QStandardItemModel     *m_mapThemeModel;
     QSortFilterProxyModel  *m_sortproxy;
+    MapThemeSortFilterProxyModel *m_mapSortProxy;
 };
 
 
@@ -98,6 +100,8 @@ MarbleControlBox::MarbleControlBox(QWidget *parent)
 
     d->m_sortproxy = new QSortFilterProxyModel( d->uiWidget.locationListView );
     d->uiWidget.locationListView->setModel( d->m_sortproxy );
+
+    d->m_mapSortProxy = new MapThemeSortFilterProxyModel( this );
 
 //  d->m_currentLocationWidget->hide(); // Current location tab is hidden
                                     //by default
@@ -159,7 +163,9 @@ MarbleControlBox::~MarbleControlBox()
 
 void MarbleControlBox::setMapThemeModel( QStandardItemModel *mapThemeModel ) {
     d->m_mapThemeModel = mapThemeModel;
-    d->uiWidget.marbleThemeSelectView->setModel( d->m_mapThemeModel );
+    d->m_mapSortProxy->setSourceModel( d->m_mapThemeModel );
+    d->m_mapSortProxy->sort( 0 );
+    d->uiWidget.marbleThemeSelectView->setModel( d->m_mapSortProxy );
     connect( d->m_mapThemeModel,       SIGNAL( rowsInserted ( QModelIndex, int, int) ),
              this,                     SLOT( updateMapThemeView() ) );
     updateMapThemeView();
@@ -490,17 +496,17 @@ void MarbleControlBox::search()
 void MarbleControlBox::selectTheme( const QString &theme )
 {
     qDebug() << "Entered selectTheme";
-    if ( !d->m_mapThemeModel )
+    if ( !d->m_mapSortProxy )
         return;
-    for ( int row = 0; row < d->m_mapThemeModel->rowCount(); ++row ) {
-        QModelIndex itIndexName = d->m_mapThemeModel->index( row, 1, QModelIndex() );
-        QModelIndex itIndex     = d->m_mapThemeModel->index( row, 0, QModelIndex() );
-        qDebug() << "Select Theme: " << theme << " Stored: " << d->m_mapThemeModel->data( itIndexName ).toString();
+    for ( int row = 0; row < d->m_mapSortProxy->rowCount(); ++row ) {
+        QModelIndex itIndexName = d->m_mapSortProxy->index( row, 1, QModelIndex() );
+        QModelIndex itIndex     = d->m_mapSortProxy->index( row, 0, QModelIndex() );
+        qDebug() << "Select Theme: " << theme << " Stored: " << d->m_mapSortProxy->data( itIndexName ).toString();
         // If  we have found the theme in the theme model,
         //     and it is not the one that we already have,
         // then
         //     set the new one in the ui.
-        if ( theme == d->m_mapThemeModel->data( itIndexName ).toString()
+        if ( theme == d->m_mapSortProxy->data( itIndexName ).toString()
              && itIndexName != d->uiWidget.marbleThemeSelectView->currentIndex() ) {
             // Mark the correct picture for the selected map theme and
             // also make sure it's shown.
